trocado de cinco maças para quatro maças

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <ul>
       <li>Cacho de Banana - <strong>R$8,48</strong></li>
-      <li>Cinco Maçãs - <strong>R$5,99</strong></li>
+      <li>Quatro Maçãs - <strong>R$5,99</strong></li>
       <li>Alface - <strong>R$6,49</strong></li>
       <li>Melancia - <strong>R$18,89</strong></li>
     </ul>
