Mudando pitaya para kiwi na coluna de itens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Compras a serem feitas</h2>
 
     <ul>
-      <li>Kilo de Pitaya - <strong>R$8,48</strong></li>
+      <li>Kilo de Kiwi - <strong>R$8,48</strong></li>
       <li>Cinco Maçãs - <strong>R$5,99</strong></li>
       <li>Alface - <strong>R$6,49</strong></li>
       <li>Melancia - <strong>R$18,89</strong></li>
